tests/core/snapshots/call-graphql-datasource.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8000)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User
  @call(steps: [{ query: "user", args: { id: "{{.value.userId}}" } }])
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
  user(id: Int!): User
  @graphQL(
    args: [{ key: "id", value: "{{.args.id}}" }]
    url: "http://upstream/graphql"
    name: "user"
  )
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}
