tests/core/snapshots/call-multiple-steps-piping.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  a(input: JSON): JSON @expr(body: "{{.args.input.a}}")
  a_input(input: JSON): JSON @expr(body: { input: "{{.args.input.a}}" })
  abc(input: JSON): JSON
  @call(
    steps: [
      { query: "a", args: { input: "{{.args.input}}" } }
      { query: "wrap_args" }
      { query: "b" }
      { query: "wrap_args" }
      { query: "c" }
    ]
  )
  abc_input(input: JSON): JSON
  @call(
    steps: [
      { query: "wrap_input", args: { input: "{{.args.input}}" } }
      { query: "a_input" }
      { query: "wrap_input" }
      { query: "b_input" }
      { query: "wrap_input" }
      { query: "c" }
    ]
  )
  b(input: JSON): JSON @expr(body: "{{.args.input.b}}")
  b_input(input: JSON): JSON @expr(body: { input: "{{.args.input.b}}" })
  c(input: JSON): JSON @expr(body: "{{.args.input.c}}")
  wrap_args: JSON @expr(body: { input: "{{.args}}" })
  wrap_input(input: JSON): JSON @expr(body: { input: "{{.args.input}}" })
}
