tests/core/snapshots/content-type-graphql.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "city": "Globe",
        "name": "Gqlforge"
      }
    }
  }
}
