tests/core/snapshots/cors-allow-cred-true.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(
  headers: {
    cors: {
      allowCredentials: true
      allowMethods: ["OPTIONS", "POST", "GET"]
      allowOrigins: ["abc.com", "xyz.com"]
      exposeHeaders: [""]
      maxAge: 23
      vary: [
        "origin"
        "access-control-request-method"
        "access-control-request-headers"
      ]
    }
  }
)
@upstream(batch: { delay: 1, headers: [], maxSize: 1000 })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  val: Int @expr(body: 1)
}
