tests/core/snapshots/custom-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(
  headers: {
    custom: [{ key: "x-id", value: "1" }, { key: "x-name", value: "John Doe" }]
  }
)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  greet: String @expr(body: "Hello World!")
}
