tests/core/snapshots/default-value-arg.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input Input {
  id: Int!
}

type Query {
  bar(input: Input = { id: 1 }): Int
}

schema {
  query: Query
}
